Tambah API master list roles.
